@@ -20,23 +20,26 @@
 <!--[if count($mediaItems) > 0]-->
 
 <div class="mediashare-slideshow">
-    <div class="mediashare-menu">
-        <div style="float: left" id="mediaCount"></div>
-        <div style="float: right"><a href="<!--[$quitUrl]-->"><!--[pnml name=_MSQUIT]--></a></div>
-        <a href="#" onclick="Slideshow.HandleSize()" id="slideshowSizeAnchor"><!--[pnml name=_MSSMALLERIMG]--></a>
-        <a href="#" onclick="Slideshow.HandlePrevious()"><img src="modules/mediashare/pntemplates/Frontend/Lightbox/back.gif" alt="<!--[pnml name=_MSPREVIOUS]-->"/></a>
-        <a href="#" onclick="Slideshow.HandleToggleStart()"><img src="modules/mediashare/pntemplates/Frontend/Lightbox/pause.gif" alt="<!--[pnml name=_MSSTOP]-->" id="slideshowStateImg"/></a>
-        <a href="#" onclick="Slideshow.HandleNext()"><img src="modules/mediashare/pntemplates/Frontend/Lightbox/forward.gif" alt="<!--[pnml name=_MSNEXT]-->"/></a>
-        <a href="#" onclick="Slideshow.HandleAdjustSpeed(-1)">-</a>
-        <span id="mediaTimeSpan">5</span>
-        <a href="#" onclick="Slideshow.HandleAdjustSpeed(+1)">+</a>
+  <div class="mediashare-menu">
+    <div style="float: left" id="mediaCount"></div>
+    <div style="float: right"><a href="<!--[$quitUrl]-->"><!--[pnml name=_MSQUIT]--></a></div>
+    <div style="float: left">
+      <a href="#" onclick="Slideshow.HandleSize()" id="slideshowSizeAnchor"><!--[pnml name=_MSSMALLERIMG]--></a>
+      | <label for="slideshowToggleTitle"><!--[pnml name=_MSSHOWTITLE]--></label> <input type="checkbox" checked="checked" id="slideshowToggleTitle" onclick="Slideshow.HandleToggleTitle()"/>
     </div>
-    <div id="mediaDisplayBox">
-        <div id="mediaBox">
-            <div id="mediaTitleBox" onmouseover="Slideshow.HandleMouseOverTitle()" onmouseout="Slideshow.HandleMouseOutTitle()" style="display: none"><span id="mediaTitle"></span></div>
-            <div id="mediaItem"></div>
-        </div>
+    <a href="#" onclick="Slideshow.HandlePrevious()"><img src="modules/mediashare/pntemplates/Frontend/Lightbox/back.gif" alt="<!--[pnml name=_MSPREVIOUS]-->"/></a>
+    <a href="#" onclick="Slideshow.HandleToggleStart()"><img src="modules/mediashare/pntemplates/Frontend/Lightbox/pause.gif" alt="<!--[pnml name=_MSSTOP]-->" id="slideshowStateImg"/></a>
+    <a href="#" onclick="Slideshow.HandleNext()"><img src="modules/mediashare/pntemplates/Frontend/Lightbox/forward.gif" alt="<!--[pnml name=_MSNEXT]-->"/></a>
+    <a href="#" onclick="Slideshow.HandleAdjustSpeed(-1)">-</a>
+    <span id="mediaTimeSpan">5</span>
+    <a href="#" onclick="Slideshow.HandleAdjustSpeed(+1)">+</a>
+  </div>
+  <div id="mediaDisplayBox">
+    <div id="mediaBox">
+      <div id="mediaTitleBox" style="display: none"><span id="mediaTitle"></span></div>
+      <div id="mediaItem"></div>
     </div>
+  </div>
 </div>
 
 <script type="text/javascript">
@@ -44,6 +47,6 @@
 </script>
 <!--[else]-->
 <div class="mediashare-slideshow">
-    <a href="javascript:history.back()"><!--[pnml name=_MSEMPTYALBUMGOBACK]--></a>
+  <a href="javascript:history.back()"><!--[pnml name=_MSEMPTYALBUMGOBACK]--></a>
 </div>
 <!--[/if]-->
