@@ -10,10 +10,12 @@ Version NEXT
   * Improving "album" plugin for Content module.
   * Added ability to add album in the pnForms media-item selector.
   * Added permission checks in the pnForms media-item selector.
+  * Fixed performance of updating nested set values (moved to stored procedure)
   * Fixed a bug in the photoshare conversion file (pnshow.php)
   * Fixed missing delete of invitations table when removing module
   * Now using PostNuke .8 prototype scripts if available
   * Fixed issues with Zikula's short URL handling
+  * Fixed menu positions
 
 
 Version 3.2.0
